[package]
name = "antdwrap"
version = "0.1.0"
authors = ["lxsang <xsang.le@gmail.com>"]
edition = "2018"

#[lib]
#crate_type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
# 's' for size
lto = true
panic = 'abort'
codegen-units = 1